# UORCA

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_VALIDATION_REPORT.md  README.md  docker-compose.yml  download_kallisto_indices.sh  packages.txt  pyproject.toml  pytest.ini  requirements.txt  run_uorca_explorer.sh  servers.toml  setup_script.sh  slurm_config_template.yaml  update_packages.R
.ipynb_checkpoints/: bootstrap-checkpoint.sh
Code/: AnalyseKallistoData.ipynb  AnalyseNCBIGEO_Metadata.ipynb  AnalyseRNAseqData.ipynb  ExtractNCBIGEOData.ipynb  IdentifyNCBIGEODatasets.ipynb  RNAseqAnalysis.ipynb
Code/.ipynb_checkpoints/: AnalyseRNAseqData-checkpoint.ipynb  IdentifyNCBIGEODatasets-checkpoint.ipynb
Code/2_extract_data/: ExtractNCBIGEOData.ipynb  InteractiveBashTests.ipynb  RScript_GetGEOMetadata.r  get_sra_ids.sh  output.txt
Code/3_analyse_data/: AnalyseNCBIGEO_Metadata.ipynb
Code/Testing/: GEOqueryTesting.ipynb  TestMetadataDownload.ipynb  TestRPythonIntegration.ipynb  TestScript.R
InputData/GSE273227_SkinTests/: meta.csv
InputData/SETBP1_Tests/: SETBP1_RNAseq_samples.csv  SETBP1_RNAseq_samples_errors.csv  abundance_files.txt
MiscData/: PoetryInstallations.ipynb  RPackageInstallation.ipynb  pipfreeze.ipynb
MiscData/.ipynb_checkpoints/: PoetryInstallations-checkpoint.ipynb
archive/1_identify_datasets/: README.md
archive/2_extract_data/: ExtractBenchmarkData.py  InteractiveBashTests.ipynb  process_geo.sh
archive/3_analyse_data/: .gitattributes  AnalyseNCBIGEO_Metadata.ipynb  AnalyseQuantificationData.ipynb  AnalyseQuantificationResults_AltApproach.ipynb  DGE.RDS  RNAseq_Analysis.py  combined_runinfo.csv
archive/SingleDatasetAnalysis/: SingleDatasetAnalysis.py
archive/script_development/: UnitTestDatasetNotes.md  reporting.py
data/2024_07_25_DetermineDatasetRelevance/: DatasetRelevance_MultipleScores.csv
data/BenchmarkDatasets/: BulkRNAseq.txt
data/kallisto_indices/: .gitattributes
docs/plans/: streamlit_refactor_and_testing.md
lib/data_analysis/: pyproject.toml
lib/data_analysis/src/data_analysis/: __init__.py
lib/data_extraction/: pyproject.toml
lib/data_identification/: pyproject.toml
lib/data_identification/src/data_identification/: __init__.py
main/: app.py  config.py  init.py  main.py  requirements.txt
main/models/: analysis-models.py  geo-models.py  models-init.py  workflow-models.py
main/routes/: analysis-routes.py  geo-routes.py  routes-init.py
main/services/: analysis-service.py  geo-service.py  llm-service.py  services-init.py  workflow-service-full.py
main/tests/: test-analysis-service.py  test-geo-service.py  test-workflow-service.py  tests-init.py
main_workflow/: master.py  mcp_utils.py
main_workflow/additional_scripts/: DatasetIdentification.py  RNAseq.R  ResultsIntegration.py  run_dataset_array.sbatch.j2  run_single_dataset.sbatch.j2  submit_datasets.py
main_workflow/agents/: analysis.py  extraction.py  metadata.py  reporting.py
main_workflow/dataset_identification/: DatasetIdentification.py  (+1 more)
notebooks/: ExperimentalPlanning.md  Gov_Adherence.md  Planning.ipynb  ValidationDataset.ipynb
sample_inputs/: batch_analysis_input.csv  benchmark_tests.csv  identification_metadata.json  multi_dataset_input_full.csv  multi_dataset_input_small.csv  selected_datasets.csv
script_development/: DataAnalysisAgent.py  DataAnalysisAgent_fortesting.py  Download_TestRNAseq_Data.py  Download_TestRNAseq_Data_update.py  PydanticAI_agenticworkflow.py  RNAseq.R
scripts/: verify_migration.sh
tests/: conftest.py
todos/: bind-mount-temp-directories-todos.md  codebase-restructure-todos.md  no-cli-uorca-implementation-todos.md
uorca/: __init__.py  cli.py  explore.py  identify.py  run.py
uorca/batch/: base.py  (+3 more)
(+322 files in other folders)
