[project]
name = "uorca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bio>=1.7.1",
    "datetime>=5.5",
    "docutils>=0.21.2",
    "geoparse>=2.0.4",
    "gseapy>=1.1.8",
    "hdbscan>=0.8.40",
    "jinja2>=3.1.6",
    "logfire>=3.9.0",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.70.0",
    "opentelemetry-api>=1.32.1",
    "panel>=1.6.3",
    "plotly>=6.1.1",
    "pydantic-ai-slim[mcp]>=0.0.48",
    "pysradb>=2.2.2",
    "seaborn>=0.13.2",
    "sphinx>=8.2.3",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "unidecode>=1.3.8",
    "python-dotenv>=1.1.0",
    "pydantic-ai[mcp]>=0.2.9",
    "rich>=14.0.0",
]

[tool.uv.workspace]
members = ["lib/memory", "lib/data_identification", "lib/data_extraction", "lib/data_analysis"]
