[project]
name = "uorca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bio>=1.7.1",
    "datetime>=5.5",
    "docutils>=0.21.2",
    "geoparse>=2.0.4",
    "gseapy>=1.1.8",
    "hdbscan>=0.8.40",
    "jinja2>=3.1.6",
    "kaleido>=0.2.1",
    "logfire>=3.9.0",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.70.0",
    "opentelemetry-api>=1.32.1",
    "panel>=1.6.3",
    "plotly>=6.1.1",
    "psutil>=5.9.0",
    "pydantic-ai-slim[mcp]>=0.0.48",
    "pysradb>=2.2.2",
    "seaborn>=0.13.2",
    "sphinx>=8.2.3",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "toml>=0.10.2",
    "unidecode>=1.3.8",
    "python-dotenv>=1.1.0",
    "pydantic-ai>=0.2.9",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "jiter>=0.10.0",
    "watchdog>=6.0.0",
]

[project.scripts]
uorca = "uorca.cli:main"

[tool.setuptools.packages.find]
include = ["uorca*"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
