[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Chen", email = "kevin.chen@telethonkids.org.au" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
